# Project-Fenrir

./: .gitignore  Cargo.toml  README.md
fenrir/: .gitignore  Cargo.toml  build.rs
fenrir/config/: comp_cnt_test.toml  comp_config_test.toml  eleven_model_simple.toml  mk1-comp.toml  mk1-eval_mcts.toml  mk1-mpi.toml  mpi_test.toml  seven_model_simple.toml
fenrir/examples/: duel_example.rs
fenrir/src/: agent.rs  duel.rs  dummy_self_play.rs  lib.rs  main.rs  model.rs  node.rs  replay_buffer.rs  run.rs  schedule.rs  self_play.rs  sequential_run.rs  setup.rs  statistics.rs  train.rs  utils.rs  visualization.rs
fenrir/test_data/: eleven_model_simple.toml  seven_model_simple.toml  test_config1.toml
fenrir/tests/: mcts.rs  mpi-test.rs  test_run.rs
game/: Cargo.toml
game/src/: board.rs  game.rs  main.rs
src/: agent.rs  board.rs  dummy_self_play.rs  eleven.rs  game.rs  lib.rs  main.rs  model.rs  replay_buffer.rs  run.rs  schedule.rs  self_play.rs  seven.rs  train.rs  utils.rs
test_data/: test_config1.toml
