[package]
name = "fenrir"
version = "0.1.0"
edition = "2024"

[features]
default = ["torch", "mpi"]
torch = ["dep:tch", "dep:libc"]
mpi = ["dep:mpi"]
bench = ["torch", "mpi"]
verbose_lvl1 = ["torch", "mpi"]
verbose_lvl2 = ["torch", "mpi", "verbose_lvl1"]
verbose_lvl3 = ["torch", "mpi", "verbose_lvl2"]

[dependencies]
bitboard = { path = "../bitboard"}
game = { path = "../game" }
tch = {version = "0.20.0" , optional = true }
libc = {version = "0.2", optional = true }
mpi = {version = "0.8", features = ["derive"], optional = true }
libffi = { version = "3.2.0", features = ["system"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
color-eyre = "0.6"
rand = { workspace = true }
rayon = "1"
crossbeam = "0.8"
arraydeque = "0.5"
rv = "0.18"
bincode = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
svg = "0.18"
itertools = "0.14" 

[dev-dependencies]
tempfile = "3.0"

[target.x86_64-unknown-linux-gnu.dependencies]
libffi = { version = "3.2.0", features = []}

[lib]

[[bin]]
name = "mpi-test"
path = "./tests/mpi-test.rs"
test = true
required-features = ["default"]

[[bin]]
name = "cnt_fenrir"
path = "./src/bin/run.rs"
required-features = ["default"]

[[bin]]
name = "seq_fenrir"
path = "./src/bin/sequential_run.rs"
required-features = ["default"]

[[bin]]
name = "inference_speed"
required-features = ["bench"]

[[bin]]
name = "sp_wr_measure"
required-features = ["default"]

[[bin]]
name = "duel_wr_measure"
required-features = ["default"]

[[bin]]
name = "mcts_depth_wr_measure"
required-features = ["default"]
